--- a/roles/inventory.ini
+++ b/roles/inventory.ini
@@ -21,4 +21,4 @@ dispatch.awstraining.tech
 [mongodb]
 mongodb.awstraining.tech
 [all:vars]
-ansible_password: DevOps321
+ansible_password=DevOps321
