--- a/roles/inventory.ini
+++ b/roles/inventory.ini
@@ -20,5 +20,7 @@ web.awstraining.tech
 dispatch.awstraining.tech
 [mongodb]
 mongodb.awstraining.tech
+[localhost]
+localhost
 [all:vars]
 ansible_password=DevOps321
