--- a/main.yaml
+++ b/main.yaml
@@ -1,5 +1,5 @@
-- name: "{{component}}"
-  hosts: inventory.ini
+- name: "install {{component}}"
+  hosts: "{{component}}"
   vars_files:
   - variables.yaml
   become: yes
