--- a/roles/common/tasks/appsetup.yaml
+++ b/roles/common/tasks/appsetup.yaml
@@ -12,6 +12,7 @@
     ansible.builtin.unarchive:
       src: "/tmp/{{component}}.zip"
       dest: /app
+      remote_src: yes
 
   - name: install dependencies
     ansible.builtin.shell: npm install
