--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -5,6 +5,7 @@
     ansible.builtin.copy:
       src: mysql.repo
       dest: /etc/yum.repos.d/mysql.repo
+      remote_src: yes
 
   - name: install mysql-community-server
     ansible.builtin.package:
