--- a/roles/web/tasks/main.yaml
+++ b/roles/web/tasks/main.yaml
@@ -22,6 +22,7 @@
     ansible.builtin.unarchive:
       src: /tmp/web.zip
       dest: /usr/share/nginx/html/
+      remote_src: yes
 
   - name: copy roboshop conf
     ansible.builtin.template:
