--- a/roles/web/tasks/main.yaml
+++ b/roles/web/tasks/main.yaml
@@ -29,4 +29,4 @@
       src: roboshop.conf.j2
       dest: /etc/nginx/default.d/roboshop.conf
     notify:
-    - restart_nginx
+      restart_nginx
